prevent jump to top of page after state change on thin screens

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,8 @@ nav.exchanges ul {
   float: right;
   max-width: 544px;
   width: 544px;
-  min-width: 494px; }
+  min-width: 494px;
+  min-height: 400px; }
   .volumePie svg > text {
     display: none; }
   .volumePie svg > text.highcharts-title {
